2016-10-10 Franz Holzinger <franz@ttproducts.de>
	* new feature: add COLLATE in SQL functions if the new parameter $collateConf has been set
	* pass the fallback parameter to SQL functions
	* remove class.tx_table_div.php

2016-05-10 Franz Holzinger <franz@ttproducts.de>
	* support for PHP 7
	* new feature: pidInList = -1 to show the records of all pages - pid_list

2015-12-21 Franz Holzinger <franz@ttproducts.de>
	* support for language fallback
	* bug fix: do not separate entered string by characters if REGEXP is used for the searchWhere function

2015-07-24 Franz Holzinger <franz@ttproducts.de>
	* tested under TYPO3 7.4.0 alpha

2015-06-13 Franz Holzinger <franz@ttproducts.de>
	* ready for TYPO3 7.2
	* remove the constants TABLE_EXTkey and PATH_BE_table because there is the autoload file ext_autoload.php

2014-11-27 Franz Holzinger <franz@ttproducts.de>
	* use $GLOBALS['TYPO3_DB']
	* make table library callable from the backend

2014-08-12 Franz Holzinger <franz@ttproducts.de>
	* introduce new db passthrough check
	* fix bug debug_trail: debugTrail
	* no t3lib_div::loadTCA since TYPO3 6.1

2013-11-21 Franz Holzinger <franz@ttproducts.de>
	* modifications for TYPO3 6.2

2012-12-03 Franz Holzinger <franz@ttproducts.de>
	* fix bug: do not use passthrough fields in $TCA

2012-11-19 Franz Holzinger <franz@ttproducts.de>
	* replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange in function getQueryConf
	* enhance function getQueryConf with support for markers

2012-10-12 Franz Holzinger <franz@ttproducts.de>
	* fix bug with closing bracked in order by functions

2012-10-10 Franz Holzinger <franz@ttproducts.de>
	* new feature: add support of SQL functions to transformOrderby and make it usable for GROUP BY

2012-09-26 Franz Holzinger <franz@ttproducts.de>
	* new feature: enhance searchWhere with regular expression

2012-07-05 Franz Holzinger <franz@ttproducts.de>